# ultra-z

./: COMPLETE DEVELOPMENT PHASES.txt  README.md  ultra_z.db
backend/: .env.example  FILES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OLLAMA_INTEGRATION.md  PHASE1_STATUS.md  QUICKSTART.md  README.md  REFERENCE.md  pyproject.toml  ultra_z.db
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  chat.py  conversations.py  health.py  llm.py  memories.py  reminders.py  settings.py  tts.py  voice.py  wakeword.py
backend/app/core/: config.py  logging_config.py  performance.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  auth.py  chat.py  conversation.py  llm.py  memory.py  reminder.py  settings.py  tts.py  voice.py
backend/app/services/: assistant_engine.py  chat.py  kokoro_tts_service.py  llm_service.py  memory.py  reminders.py  stt_service.py  tts_service.py
backend/scripts/: benchmark_kokoro_threads.py  profile_tts_performance.py  run_chat_stream_test.py  run_tts_test.py  test_llm.py  test_pipeline.py  test_stt.py  test_tts.py  test_voice.py
backend/tests/: test_chat_streaming.py  test_ollama_integration.py  test_performance_optimizations.py  test_tts.py  test_voice.py
backend/wakeword/: __init__.py  audio_utils.py  detector.py  listener.py  service.py
frontend/: .gitignore  app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/electron/: main.js  preload.js
frontend/src/: App.jsx  index.css  (+1 more)
(+24 files in other folders)
