[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-z-backend"
version = "0.1.0"
description = "Phase 1 backend foundation for ULTRA-Z"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<0.31",
  "sqlalchemy>=2.0,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "itsdangerous>=2.2,<3.0",
  "aiohttp>=3.9,<4.0",
  "colorlog>=6.8,<7.0",
  "faster-whisper>=1.1.1,<2.0",
  "python-multipart>=0.0.9,<0.1",
  # Wake word detection
  "openwakeword>=0.6,<1.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
audio = [
  "pyaudio>=0.2.14,<0.3"
]
tts = [
  "kokoro>=0.7.16,<0.8"
]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
